fix hero header alignment

--- a/public/frontend/assets/css/style.rtl.css
+++ b/public/frontend/assets/css/style.rtl.css
@@ -118,3 +118,7 @@
 .navbar-area.nav-style-02 .nav-container .logo-wrapper .logo {
     margin-right: auto;
 }
+
+.header-area .header-inner {
+    text-align: right;
+}
